[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benlink"
version = "0.1.0"
description = "A library for Bluetooth communication with Benshi radios like the Vero VR-N76, RadioOddity GA5WB, and BTech UV-Pro."
authors = [{name = "Kyle Husmann", email = "kyle.husmann@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"